--- a/RegresionMatematica/src/app/app.component.html
+++ b/RegresionMatematica/src/app/app.component.html
@@ -1,6 +1,3 @@
 <div style="margin: 30px;">
-    <h1>Regresión Matemática</h1>
-    <hr>
-
-    <p>Esta es una aplicación de Regresión Matemática</p>
+    <router-outlet></router-outlet>
 </div>
