--- a/RegresionMatematica/src/app/componentes/inicio/inicio.component.html
+++ b/RegresionMatematica/src/app/componentes/inicio/inicio.component.html
@@ -1,3 +1,21 @@
-<p>
-  inicio works!
-</p>
+<div class="card col-md-3 mx-auto">
+    <div class="card-header bg-dark text-white">
+        <h3 class="card-title text-center">Inicio de Sesión</h3>
+    </div>
+
+    <div class="card-body">
+        <form>
+            <div class="form-group">
+                <label style="font-weight: bold;">Documento</label>
+                <input [(ngModel)]="IdUsuario" name="IdUsuario" type="text" class="form-control">
+            </div>
+
+            <div class="form-group">
+                <label style="font-weight: bold;">Password</label>
+                <input [(ngModel)]="Contra" name="Contra" type="password" class="form-control">
+            </div>
+
+            <button type="button" (click)="iniciarSesion()" class="btn btn-primary btn-block">Ingresar</button>
+        </form>
+    </div>
+</div>
