--- a/RegresionMatematica/src/styles.css
+++ b/RegresionMatematica/src/styles.css
@@ -1,4 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.puntero-manito {
+    cursor: pointer;
+}
+
+.card-shadow {
+    box-shadow: 4px 4px 10px #666;
+}
+
+footer {
+    position: fixed;
+    width: 100%;
+    padding: 0px;
+    bottom: 0px;
+}
