--- a/RegresionMatematica/src/app/administrador/usuarios/usuarios.component.html
+++ b/RegresionMatematica/src/app/administrador/usuarios/usuarios.component.html
@@ -1,6 +1,8 @@
 <h1>Usuarios</h1>
 <hr>
 
+<button (click)="agregarUsuario()" class="btn btn-outline-success m-1"> <img src="assets/Iconos/Agregar.png" style="width: 32px;"> Agregar Usuario</button>
+
 <table class="table table-hover">
     <thead>
         <tr>
@@ -20,10 +22,10 @@
             <td>{{ usuario.nombre }}</td>
             <td>{{ usuario.correo }}</td>
             <td>
-                <button class="btn btn-outline-warning"> <img src="assets/Iconos/Editar.png" style="width: 32px;"> Editar</button>
+                <button (click)="editarUsuario(usuario)" class="btn btn-outline-warning"> <img src="assets/Iconos/Editar.png" style="width: 32px;"> Editar</button>
             </td>
             <td>
-                <button class="btn btn-outline-danger"> <img src="assets/Iconos/Eliminar.png" style="width: 32px;"> Eliminar</button>
+                <button (click)="eliminarUsuario(usuario)" class="btn btn-outline-danger"> <img src="assets/Iconos/Eliminar.png" style="width: 32px;"> Eliminar</button>
             </td>
         </tr>
     </tbody>
